# image_processor

./: BMPFile.cpp  BMPFile.h  CMakeLists.txt  Color.h  Controller.cpp  Controller.h  Crop.cpp  Crop.h  EdgeDetection.cpp  FormulaFilter.h  GaussianBlur.cpp  Grayscale.cpp  Image.cpp  Image.h  MatrixFilter.cpp  Negative.cpp  README.md  image_processor.cpp
filters/: EdgeDetection.h  Filter.h  FormulaFilter.cpp  GaussianBlur.h  Grayscale.h  MatrixFilter.h  Negative.h  Sharpening.cpp  Sharpening.h
